--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,6 @@
 	<title> Hello Coursera!!!!</title>
 </head>
 <body>
-<h1>hello Coursera!</h1> 
+<h1>hello Coursera! it is a great day</h1> 
 </body>
 </html> 
